<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/drawer_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FEF2F2"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/logo_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/app_logo"
                android:scaleType="fitCenter" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/title_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#6A4B6E" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bg_drawer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:id="@+id/home_pic"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/home"
                    android:scaleType="fitXY"
                    android:layout_gravity="left|center_vertical"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/home"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="#384D6E"
                    android:layout_gravity="center_horizontal|center_vertical" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:id="@+id/share_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:contentDescription="@string/share"
                    android:src="@drawable/share"
                    android:scaleType="fitXY"
                    android:layout_gravity="left|center_vertical"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/share_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/share"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="#384D6E"
                    android:layout_gravity="center_horizontal|center_vertical" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/contact_developer"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:id="@+id/call_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:contentDescription="@string/call_img"
                    android:src="@drawable/contact"
                    android:scaleType="fitXY"
                    android:layout_gravity="left|center_vertical"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/call_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/contact_developer"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="#384D6E"
                    android:layout_gravity="center_horizontal|center_vertical" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:id="@+id/setting_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:contentDescription="@string/setting_img"
                    android:src="@drawable/setting"
                    android:scaleType="fitXY"
                    android:layout_gravity="left|center_vertical"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/setting_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/setting"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="#384D6E"
                    android:layout_gravity="center_horizontal|center_vertical" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/developer_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/developer_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/app_developer_name"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#6A4B6E" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>