<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <ScrollView
                    android:id="@+id/vscroll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/linear2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FEF2F2"
                        android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/First_Row"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="horizontal">
                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview1"
                                android:layout_width="140dp"
                                android:layout_height="170dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginEnd="25dp"
                                android:layout_marginBottom="25dp"
                                android:padding="8dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:layout_gravity="center_horizontal|center_vertical"
                                app:cardElevation="10dp"
                                app:cardCornerRadius="20dp">
                                <ImageView
                                    android:id="@+id/imageview1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/attitude_image"
                                    android:src="@drawable/attitude"
                                    android:scaleType="fitEnd" />
                                <TextView
                                    android:id="@+id/textview1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:gravity="center_horizontal|top"
                                    android:text="@string/altitude_shayaari"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="#324E71"
                                    android:layout_gravity="center_horizontal|top" />
                            </androidx.cardview.widget.CardView>
                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview2"
                                android:layout_width="140dp"
                                android:layout_height="170dp"
                                android:layout_marginStart="25dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginBottom="25dp"
                                android:padding="8dp"
                                app:cardElevation="10dp"
                                app:cardCornerRadius="20dp">
                                <ImageView
                                    android:id="@+id/imageview2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/funny_image"
                                    android:src="@drawable/funny"
                                    android:scaleType="fitEnd" />
                                <TextView
                                    android:id="@+id/textview2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:gravity="center_horizontal|top"
                                    android:text="@string/funny_shayaari"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="#324E71"
                                    android:layout_gravity="center_horizontal|top" />
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/Second_Row"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="horizontal">
                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview3"
                                android:layout_width="140dp"
                                android:layout_height="170dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginEnd="25dp"
                                android:layout_marginBottom="25dp"
                                android:padding="8dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:layout_gravity="center_horizontal|center_vertical"
                                app:cardElevation="10dp"
                                app:cardCornerRadius="20dp">
                                <ImageView
                                    android:id="@+id/imageview3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/romantic_image"
                                    android:src="@drawable/romantic"
                                    android:scaleType="fitEnd" />
                                <TextView
                                    android:id="@+id/textview3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:gravity="center_horizontal|top"
                                    android:text="@string/romantic_shayaari"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="#324E71"
                                    android:layout_gravity="center_horizontal|top" />
                            </androidx.cardview.widget.CardView>
                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview4"
                                android:layout_width="140dp"
                                android:layout_height="170dp"
                                android:layout_marginStart="25dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginBottom="25dp"
                                android:padding="8dp"
                                app:cardElevation="10dp"
                                app:cardCornerRadius="20dp">
                                <ImageView
                                    android:id="@+id/imageview4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/love_image"
                                    android:src="@drawable/love"
                                    android:scaleType="fitEnd" />
                                <TextView
                                    android:id="@+id/textview4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:gravity="center_horizontal|top"
                                    android:text="@string/love_shayaari"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="#324E71"
                                    android:layout_gravity="center_horizontal|top" />
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/Third_Row"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="horizontal">
                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview5"
                                android:layout_width="140dp"
                                android:layout_height="170dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginEnd="25dp"
                                android:layout_marginBottom="25dp"
                                android:padding="8dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:layout_gravity="center_horizontal|center_vertical"
                                app:cardElevation="10dp"
                                app:cardCornerRadius="20dp">
                                <ImageView
                                    android:id="@+id/imageview5"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/dosti_image"
                                    android:src="@drawable/dosti"
                                    android:scaleType="fitEnd" />
                                <TextView
                                    android:id="@+id/textview5"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:gravity="center_horizontal|top"
                                    android:text="@string/dosti_shayaari"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="#324E71"
                                    android:layout_gravity="center_horizontal|top" />
                            </androidx.cardview.widget.CardView>
                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview6"
                                android:layout_width="140dp"
                                android:layout_height="170dp"
                                android:layout_marginStart="25dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginBottom="25dp"
                                android:padding="8dp"
                                app:cardElevation="10dp"
                                app:cardCornerRadius="20dp">
                                <ImageView
                                    android:id="@+id/imageview6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/girl_image"
                                    android:src="@drawable/girls"
                                    android:scaleType="fitEnd" />
                                <TextView
                                    android:id="@+id/textview6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:gravity="center_horizontal|top"
                                    android:text="@string/girls_shayaari"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="#324E71"
                                    android:layout_gravity="center_horizontal|top" />
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                        <ImageView
                            android:id="@+id/imageview7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/kiss_image"
                            android:src="@drawable/kiss"
                            android:scaleType="center"
                            android:layout_gravity="center_horizontal|center_vertical" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <LinearLayout
        android:id="@+id/_nav_view"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#EEEEEE">
        <include layout="@layout/_drawer_home" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>