<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/show_shayaari_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="@drawable/ui_shayaari"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            tools:ignore="UselessParent">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="150dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="50dp"
                android:padding="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp">
                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/textview"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#384D6E"
                    android:layout_gravity="center_horizontal|center_vertical" />
                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:gravity="center_horizontal|bottom"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal|bottom">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/copy_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="10dp"
                        android:padding="8dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/copy_shayaari"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#384D6E"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="30dp"
                        style="@style/Widget.MaterialComponents.Button" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/share_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="8dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/share_shayaari"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#384D6E"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="30dp"
                        style="@style/Widget.MaterialComponents.Button" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>